[tool.poetry]
name = "mazes"
version = "0.1.0"
description = ""
authors = ["Vishal Talwar <rawlatv@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
blessed = "^1.19.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
